Updated supervised code

--- a/reproduce.ipynb
+++ b/reproduce.ipynb
@@ -7,6 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy, os\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "import torch\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "\n",
@@ -15,12 +19,11 @@
     "from torch_geometric.loader import NeighborLoader, LinkNeighborLoader\n",
     "from torch_geometric.utils import negative_sampling\n",
     "\n",
-    "\n",
     "# project-specific\n",
     "import lib\n",
-    "from lib.model import SupervisedNodePredictions, SupervisedEdgePredictions, train_node_readout, make_gae, make_gmae, Readout, test_node_readout, get_x_dict, GraphSAGE, pretrain_gmae, train_edge_readout, test_edge_readout\n",
+    "from lib.model import SupervisedNodePredictions, SupervisedEdgePredictions, SupervisedMTL, train_node_readout, make_gae, make_gmae, Readout, test_node_readout, get_x_dict, GraphSAGE, pretrain_gmae, train_edge_readout, test_edge_readout\n",
     "\n",
-    "from lib.dataset import load_data"
+    "from lib.dataset import load_data, to_inductive"
    ]
   },
   {
@@ -201,7 +204,8 @@
    "id": "c2614cab",
    "metadata": {},
    "source": [
-    "Train supervised versions of the network for comparison"
+    "# Train supervised versions of the network for comparison\n",
+    "## Node classification"
    ]
   },
   {
@@ -212,13 +216,13 @@
    "outputs": [],
    "source": [
     "target_type = \"paper\"\n",
-    "data_inductive = lib.dataset.to_inductive(data.clone(), target_type)\n",
+    "data_inductive = to_inductive(copy.deepcopy(data), target_type)\n",
     "\n",
     "train_loader = NeighborLoader(\n",
     "    data_inductive,\n",
     "    input_nodes=(target_type, data_inductive[target_type].train_mask),\n",
     "    num_neighbors=[15, 10],\n",
-    "    batch_size=1024,\n",
+    "    batch_size=2048,\n",
     "    shuffle=True,\n",
     ")\n",
     "val_loader = NeighborLoader(\n",
@@ -228,25 +232,47 @@
     "    batch_size=2048,\n",
     ")\n",
     "\n",
-    "hidden_dim = 128  # common dim after projection (and GNN input dim)\n",
+    "hidden_dim = 128\n",
+    "num_classes = int(data_inductive[target_type].y.max()) + 1\n",
     "\n",
-    "# GNN expects the post-encoder dim as input\n",
-    "model = GraphSAGE(in_channels=hidden_dim, hidden_channels=hidden_dim)\n",
+    "model = GraphSAGE(in_channels=hidden_dim, out_channels=hidden_dim, num_classes=num_classes)\n",
     "model = to_hetero(model, data_inductive.metadata(), aggr='sum')\n",
-    "model.num_classes = num_classes\n",
-    "model.output_dim = hidden_dim\n",
-    "\n",
     "model = model.to(device)\n",
     "\n",
-    "pipeline = SupervisedNodePredictions(model=model, device=device, optimizer=None, target_type=target_type)\n",
-    "optimizer = torch.optim.Adam(list(model.parameters()) + list(pipeline.classifier.parameters()), lr=0.003)\n",
-    "pipeline.optimizer = optimizer\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.003)\n",
+    "pipeline = SupervisedNodePredictions(\n",
+    "    model=model,\n",
+    "    device=device,\n",
+    "    optimizer=optimizer,\n",
+    "    target_type=target_type\n",
+    ")\n",
     "\n",
+    "best_acc = 0\n",
+    "save_path = 'supervised/models/node/'\n",
     "for epoch in range(10):\n",
     "    loss = pipeline.train(train_loader)\n",
     "    acc = pipeline.test(val_loader)\n",
-    "    print(f\"Epoch {epoch:02d} | Loss: {loss:.4f} | Val Acc: {acc:.4f}\")\n"
+    "\n",
+    "    print(f\"Epoch {epoch:02d} | \"\n",
+    "          f\"Loss: {loss:.4f} | \"\n",
+    "          f\"Val Acc: {acc:.4f}\")\n",
+    "\n",
+    "    torch.save({\n",
+    "        \"model_state\": model.state_dict(),\n",
+    "        \"optimizer_state\": optimizer.state_dict(),\n",
+    "        \"epoch\": epoch\n",
+    "    }, save_path+f\"checkpoint_{epoch}.pt\")\n",
+    "\n",
+    "    if acc > best_acc:\n",
+    "        best_acc = acc\n",
+    "        torch.save(model.state_dict(), save_path+\"best.pt\")"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Link predictions",
+   "id": "742ecd17d1f33656"
   },
   {
    "cell_type": "code",
@@ -265,22 +291,26 @@
     "    batch_size=2048,\n",
     "    shuffle=True,\n",
     ")\n",
+    "edge_index_all = data[target_edge_type].edge_index\n",
+    "src_papers = edge_index_all[0]\n",
+    "\n",
+    "# Use papers val_mask to select validation edges\n",
+    "val_edge_mask = data['paper'].val_mask[src_papers]\n",
+    "val_edge_index = edge_index_all[:, val_edge_mask]\n",
+    "\n",
     "val_loader = LinkNeighborLoader(\n",
     "    data,\n",
     "    num_neighbors=[15, 10],\n",
-    "    edge_label_index=(target_edge_type, data[target_edge_type].edge_index),\n",
+    "    edge_label_index=(target_edge_type, val_edge_index),\n",
     "    neg_sampling_ratio=1.0,\n",
     "    batch_size=2048,\n",
     "    shuffle=False,\n",
     ")\n",
     "\n",
-    "hidden_dim = 128  # common dim after projection (and GNN input dim)\n",
+    "hidden_dim = 128\n",
     "\n",
-    "# GNN expects the post-encoder dim as input\n",
-    "model = GraphSAGE(in_channels=hidden_dim, hidden_channels=hidden_dim)\n",
+    "model = GraphSAGE(in_channels=hidden_dim, out_channels=hidden_dim)\n",
     "model = to_hetero(model, data_inductive.metadata(), aggr='sum')\n",
-    "\n",
-    "print(f'Running on {device}')\n",
     "model = model.to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.003)\n",
@@ -291,12 +321,155 @@
     "    target_edge_type=target_edge_type\n",
     ")\n",
     "\n",
-    "for epoch in range(10):\n",
-    "    loss = pipeline.train(train_loader)\n",
-    "    acc, auroc, auprc = pipeline.test(val_loader)\n",
+    "best_auc = 0\n",
+    "save_path = \"supervised/models/edge/\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
     "\n",
-    "    print(f\"Epoch {epoch:02d} | Loss: {loss:.4f} | Acc: {acc:.4f} | AUROC: {auroc:.4f} | AUPRC: {auprc:.4f}\")\n"
+    "max_steps = 10_000\n",
+    "eval_every = 500\n",
+    "save_every = 500\n",
+    "\n",
+    "step = 0\n",
+    "epoch = 0\n",
+    "\n",
+    "pbar = tqdm(total=max_steps)\n",
+    "while step < max_steps:\n",
+    "    print(f\"=== Epoch {epoch} ===\")\n",
+    "    for batch in train_loader:\n",
+    "        step += 1\n",
+    "\n",
+    "        loss = pipeline.train_on_batch(batch)\n",
+    "\n",
+    "        if step % eval_every == 0:\n",
+    "            metrics = pipeline.test(val_loader)\n",
+    "            auc = metrics[\"AUC\"]\n",
+    "\n",
+    "            pbar.write(\n",
+    "                f\"AUC: {auc:.4f}\"\n",
+    "            )\n",
+    "\n",
+    "            if auc > best_auc:\n",
+    "                best_auc = auc\n",
+    "                torch.save(model.state_dict(), save_path + \"best.pt\")\n",
+    "\n",
+    "        if step % save_every == 0:\n",
+    "            torch.save({\n",
+    "                \"model_state\": model.state_dict(),\n",
+    "                \"optimizer_state\": optimizer.state_dict(),\n",
+    "                \"step\": step,\n",
+    "                \"epoch\": epoch,\n",
+    "            }, save_path + f\"checkpoint_{step}.pt\")\n",
+    "\n",
+    "        if step >= max_steps:\n",
+    "            break\n",
+    "\n",
+    "        pbar.update(1)\n",
+    "    epoch += 1"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Multi-Task Learning",
+   "id": "8a79b0b5794d2f25"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "target_node_type = \"paper\"\n",
+    "\n",
+    "train_loader = LinkNeighborLoader(\n",
+    "    data_inductive,\n",
+    "    num_neighbors=[15, 10],\n",
+    "    edge_label_index=(target_edge_type,  data_inductive[target_edge_type].edge_index),\n",
+    "    neg_sampling_ratio=1.0,\n",
+    "    batch_size=2048,\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "edge_index_all = data[target_edge_type].edge_index\n",
+    "src_papers = edge_index_all[0]\n",
+    "\n",
+    "# Use papers val_mask to select validation edges\n",
+    "val_edge_mask = data['paper'].val_mask[src_papers]\n",
+    "val_edge_index = edge_index_all[:, val_edge_mask]\n",
+    "\n",
+    "val_loader = LinkNeighborLoader(\n",
+    "    data,\n",
+    "    num_neighbors=[15, 10],\n",
+    "    edge_label_index=(target_edge_type, val_edge_index),\n",
+    "    neg_sampling_ratio=1.0,\n",
+    "    batch_size=2048,\n",
+    "    shuffle=False\n",
+    ")\n",
+    "\n",
+    "model = GraphSAGE(in_channels=hidden_dim, out_channels=hidden_dim, num_classes=num_classes)\n",
+    "model = to_hetero(model, data_inductive.metadata(), aggr='sum')\n",
+    "model = model.to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.003)\n",
+    "\n",
+    "pipeline = SupervisedMTL(\n",
+    "    model=model,\n",
+    "    device=device,\n",
+    "    optimizer=optimizer,\n",
+    "    target_node_type=target_node_type,\n",
+    "    target_edge_type=target_edge_type\n",
+    ")\n",
+    "\n",
+    "best_loss = float(\"inf\")\n",
+    "save_path = 'supervised/models/mtl/'\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "max_steps = 10_000\n",
+    "eval_every = 500\n",
+    "save_every = 500\n",
+    "\n",
+    "step = 0\n",
+    "epoch = 0\n",
+    "\n",
+    "pbar = tqdm(total=max_steps)\n",
+    "while step < max_steps:\n",
+    "    print(f\"=== Epoch {epoch} ===\")\n",
+    "    for batch in train_loader:\n",
+    "        step += 1\n",
+    "\n",
+    "        pipeline.train_on_batch(batch)\n",
+    "\n",
+    "        if step % eval_every == 0:\n",
+    "            metrics = pipeline.test(val_loader)\n",
+    "            loss = metrics[\"loss_total\"]\n",
+    "\n",
+    "            print(\n",
+    "                f\"AUC: {metrics['AUC']:.4f} | \"\n",
+    "                f\"Accuracy: {metrics['Accuracy']:.4f} | \"\n",
+    "                f\"Edge loss: {metrics['loss_edge']:.4f} | \"\n",
+    "                f\"Node loss: {metrics['loss_node']:.4f} | \"\n",
+    "                f\"Total Loss: {loss:.4f}\"\n",
+    "            )\n",
+    "\n",
+    "            if loss < best_loss:\n",
+    "                best_loss = loss\n",
+    "                torch.save(model.state_dict(), save_path + \"best.pt\")\n",
+    "\n",
+    "        if step % save_every == 0:\n",
+    "            torch.save({\n",
+    "                \"model_state\": model.state_dict(),\n",
+    "                \"optimizer_state\": optimizer.state_dict(),\n",
+    "                \"step\": step,\n",
+    "                \"epoch\": epoch,\n",
+    "            }, save_path + f\"checkpoint_{step}.pt\")\n",
+    "\n",
+    "        if step >= max_steps:\n",
+    "            break\n",
+    "\n",
+    "        pbar.update(1)\n",
+    "    epoch += 1"
+   ],
+   "id": "496b783ada461c14"
   }
  ],
  "metadata": {
